<resources>
    <string name="Admin">Admin</string>
    <string name="By_continuing_you_are_agreeing_with_our_standard">By continuing you are agreeing with our standard</string>
    <string name="Delete">Delete</string>
    <string name="EULATerms_of_Service">EULA/Terms of Service</string>
    <string name="Failed_to_Change_Picture">Failed to Change Picture</string>
    <string name="Friend_invitation_sent">Friend invitation sent</string>
    <string name="Friend_requests">Friend requests</string>
    <string name="Hold_on">Hold on</string>
    <string name="Lets_play">"Let's play"</string>
    <string name="Member">Member</string>
    <string name="Moderator">Moderator</string>
    <string name="Network_is_not_connected_Please_try_again_later">Network is not connected. Please try again later.</string>
    <string name="Owner">Owner</string>
    <string name="Please_try_again_later_once_you_have_network_connection">Please try again later once you have network connection.</string>
    <string name="SEND">SEND</string>
    <string name="Update">Update</string>
    <string name="You">You</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_levels_title">About Levels</string>
    <string name="account_sensitivity_warning">Remember: Plato will never ask you for your login code. Always keep your personal information private.</string>
    <string name="ad_dialog_title">Reward Video Ads</string>
    <string name="add_friend">Add Friend</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="all_members_can_invite">All members can invite people to group.</string>
    <string name="amtyping_status_online">Online</string>
    <string name="amtyping_status_typing">typing...</string>
    <string name="amtyping_status_user_is_typing">%s is typing...</string>
    <string name="amtyping_status_users_are_typing">%d members are typing...</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anyone_with_this_link_will_join">Anyone with this link will be able to join your game.</string>
    <string name="app_link_unsupported">URL is not supported</string>
    <string name="app_name">Plato</string>
    <string name="app_update_no_updates_available">Plato app is up to date</string>
    <string name="app_update_update_available">New version of Plato app is available</string>
    <string name="app_version">App version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asset_statements">[{\"include\": \"https://platoapp.com/.well-known/assetlinks.json\"}]</string>
    <string name="av_perm_microphone">Audio calls need microphone access</string>
    <string name="av_perm_microphone_rationale_title">Microphone</string>
    <string name="av_perm_microphone_settings_title">Microphone access</string>
    <string name="block_table_dialog_description">You will not be able to see this table or join it</string>
    <string name="blocked_user">Blocked User</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="card_content_descriptor">card</string>
    <string name="change_host_and_leave_confirmation_dialog_description">You will give ownership of the game session to this player &amp; lose the game immediately.</string>
    <string name="change_host_and_leave_confirmation_dialog_title">Promote &amp; leave?</string>
    <string name="change_host_dialog_description">You need to give ownership of the game session to other player before leaving.</string>
    <string name="change_host_dialog_title">Change Host</string>
    <string name="change_host_failed_message">Cannot promote %s. Please choose another player.</string>
    <string name="change_profile_animated_picture_confirmation_message">Are you sure you want to apply this GIF as the new picture?</string>
    <string name="change_profile_banner_CD">Change your profile banner</string>
    <string name="change_profile_picture_CD">Change your profile picture</string>
    <string name="change_profile_picture_avatar">Avatar</string>
    <string name="change_profile_picture_camera">Camera</string>
    <string name="change_profile_picture_confirmation_my_pips">My pips</string>
    <string name="change_profile_picture_confirmation_title">Change Picture</string>
    <string name="change_profile_picture_frame">Frame</string>
    <string name="change_profile_picture_gallery">Gallery</string>
    <string name="change_profile_picture_select_gif">Select gif</string>
    <string name="change_profile_picture_title">Change Picture</string>
    <string name="change_profile_static_picture_confirmation_message">Are you sure you want to apply this photo as the new picture?</string>
    <string name="change_seat_dialog_description">Move %s to which seat?</string>
    <string name="change_seat_dialog_empty_seat">Empty</string>
    <string name="change_seat_dialog_seat_option">Seat %d</string>
    <string name="change_seat_dialog_title">Change Seat</string>
    <string name="change_seat_failed_message">Cannot change seats for %s. Please choose another player or seat.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chat_bar_iap_CD">Open Catalog</string>
    <string name="choose_game_session">Choose Game Session</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="color_picker_fragment_title">Color Picker</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">bd7aedbd353d4f99b9605ff90e6292f1</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="dialog_maintenance_body_one">Sorry, Plato is not available at this moment.</string>
    <string name="dialog_maintenance_body_three">Please check back again soon!</string>
    <string name="dialog_maintenance_body_two">"Don't uninstall (it's us not you)"</string>
    <string name="dialog_maintenance_title">Server Maintenance</string>
    <string name="filter_alphabet_a_to_z">NAME A-Z ↓</string>
    <string name="filter_alphabet_z_to_a">NAME Z-A ↑</string>
    <string name="filter_featured">Featured</string>
    <string name="filter_highest_price">Highest Price</string>
    <string name="filter_lowest_price">Lowest Price</string>
    <string name="get_support">Get Support</string>
    <string name="notification_permission_rationale_subtitle">Keep up-to-date by being notified about:</string>
    <string name="notification_permission_rationale_title">Get a Better Experience!</string>
    <string name="notification_permission_rationale_type_friend_messages">Friend Messages</string>
    <string name="notification_permission_rationale_type_group_messages">Group Messages</string>
    <string name="notification_permission_rationale_type_news">Plato News</string>
    <string name="notification_permission_rationale_type_people_invitations">People Invitations</string>
    <string name="plato_account">Account</string>
    <string name="plato_back_cd">Go Back</string>
    <string name="plato_cancel">Cancel</string>
    <string name="plato_continue">Continue</string>
    <string name="plato_create_new_game">CREATE NEW GAME</string>
    <string name="plato_devices">Devices</string>
    <string name="plato_later">Later</string>
    <string name="plato_ok">OK</string>
    <string name="plato_report_reason_cheating">This person is playing unfairly.</string>
    <string name="plato_report_reason_offensive">This person is being offensive.</string>
    <string name="plato_report_reason_offensive_name">"This person's username or profile picture is offensive."</string>
    <string name="plato_report_reason_serious_threat">Serious threat of real-life violence.</string>
    <string name="plato_report_reason_spam">This person is spamming.</string>
    <string name="plato_report_reason_title">Select a reason:</string>
    <string name="plato_report_title">Block &amp; Report</string>
    <string name="plato_save">Save</string>
    <string name="plato_settings_about_plato">About Plato</string>
    <string name="plato_settings_games">Games</string>
    <string name="plato_settings_language">Language</string>
    <string name="plato_settings_notifications">Notifications</string>
    <string name="plato_settings_privacy">Privacy &amp; Accessibility</string>
    <string name="plato_settings_themes">Themes</string>
    <string name="plato_submit">SUBMIT</string>
    <string name="preferred_language_title">Server Select</string>
    <string name="rooms_server_language_description">Select a server according to the language you usually type in for the most relevant rooms</string>
    <string name="sort_by">Sort By</string>
    <string name="sorting_order">Sorting Order</string>
</resources>