<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Space android:id="@id/dialog_title_space" android:layout_width="@dimen/action_bar_button_size" android:layout_height="@dimen/action_bar_button_size" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:id="@id/dialog_title" android:text="@string/sorting_order" app:layout_constraintBottom_toTopOf="@id/dialog_title_divider" app:layout_constraintEnd_toStartOf="@id/reset_filters_button" app:layout_constraintStart_toEndOf="@id/dialog_title_space" app:layout_constraintTop_toTopOf="parent" style="@style/AlertDialogTitleSorting" />
    <ImageButton android:id="@id/reset_filters_button" android:visibility="invisible" android:src="@drawable/ic_reset" app:layout_constraintBottom_toBottomOf="@id/dialog_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/dialog_title" style="@style/ActionBarButtonStyle" />
    <View android:id="@id/dialog_title_divider" android:background="?appThemeColorDividerLine" android:layout_width="match_parent" android:layout_height="@dimen/divider_height" android:layout_marginTop="@dimen/action_bar_height" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:id="@id/sort_by_title" android:text="@string/sort_by" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/dialog_title_divider" style="@style/AlertDialogSubtitleSortingCriteria" />
    <TextView android:id="@id/sort_by_featured" android:layout_marginTop="@dimen/element_padding_default" android:text="@string/filter_featured" android:layout_marginStart="@dimen/element_padding_default" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sort_by_title" style="@style/IapSortOption" />
    <TextView android:id="@id/sort_by_name_a_z" android:text="@string/filter_alphabet_a_to_z" app:layout_constraintStart_toEndOf="@id/sort_by_featured" app:layout_constraintTop_toTopOf="@id/sort_by_featured" style="@style/IapSortOption" />
    <TextView android:id="@id/sort_by_name_z_a" android:text="@string/filter_alphabet_z_to_a" app:layout_constraintStart_toEndOf="@id/sort_by_name_a_z" app:layout_constraintTop_toTopOf="@id/sort_by_featured" style="@style/IapSortOption" />
    <TextView android:id="@id/sort_highest_price_first" android:text="@string/filter_highest_price" app:layout_constraintStart_toStartOf="@id/sort_by_featured" app:layout_constraintTop_toBottomOf="@id/sort_by_featured" style="@style/IapSortOption" />
    <TextView android:id="@id/sort_lowest_price_first" android:text="@string/filter_lowest_price" app:layout_constraintStart_toEndOf="@id/sort_highest_price_first" app:layout_constraintTop_toTopOf="@id/sort_highest_price_first" style="@style/IapSortOption" />
    <TextView android:textSize="@dimen/text_size_small" android:textColor="?appThemeColorTextTitle" android:id="@id/button_cancel" android:layout_width="0.0dp" android:layout_marginTop="@dimen/element_padding_extra_large" android:text="@string/plato_cancel" android:layout_marginEnd="@dimen/element_padding_small" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/button_save" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sort_lowest_price_first" style="@style/ButtonTransparent" />
    <TextView android:textSize="@dimen/text_size_small" android:id="@id/button_save" android:layout_width="0.0dp" android:layout_marginTop="@dimen/element_padding_extra_large" android:text="@string/plato_save" android:layout_marginStart="@dimen/element_padding_small" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/button_cancel" app:layout_constraintTop_toBottomOf="@id/sort_lowest_price_first" style="@style/ButtonBlue" />
</androidx.constraintlayout.widget.ConstraintLayout>
