<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/notification_rationale_banner_image_view" android:layout_width="0.0dp" android:layout_height="0.0dp" android:layout_marginTop="@dimen/element_padding_extra_large" android:src="@drawable/img_permission_notification" app:layout_constraintDimensionRatio="1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_percent="0.5" />
    <TextView android:textSize="@dimen/text_size_extra_large" android:textColor="?appThemeColorTextTitle" android:gravity="center_horizontal" android:id="@id/notification_rationale_title_text_view" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/element_padding_small" android:text="@string/notification_permission_rationale_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/notification_rationale_banner_image_view" app:layout_constraintWidth_percent="0.9" />
    <TextView android:textSize="@dimen/text_size_default" android:textColor="?appThemeColorTextTitle" android:gravity="center_horizontal" android:id="@id/notification_rationale_subtitle_text_view" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/element_padding_small" android:text="@string/notification_permission_rationale_subtitle" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/notification_rationale_title_text_view" app:layout_constraintWidth_percent="0.9" />
    <LinearLayout android:orientation="vertical" android:id="@id/notification_rationale_types_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/element_padding_default" android:paddingStart="@dimen/element_padding_default" android:paddingEnd="@dimen/element_padding_default" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/notification_rationale_subtitle_text_view">
        <TextView android:id="@id/notification_rationale_type_news_text_view" android:text="@string/notification_permission_rationale_type_news" style="@style/NotificationRationaleType" />
        <TextView android:id="@id/notification_rationale_type_friend_messages_text_view" android:text="@string/notification_permission_rationale_type_friend_messages" style="@style/NotificationRationaleType" />
        <TextView android:id="@id/notification_rationale_type_people_invitations_text_view" android:text="@string/notification_permission_rationale_type_people_invitations" style="@style/NotificationRationaleType" />
        <TextView android:id="@id/notification_rationale_type_group_messages_text_view" android:text="@string/notification_permission_rationale_type_group_messages" style="@style/NotificationRationaleType" />
    </LinearLayout>
    <TextView android:id="@id/notification_rationale_button_later" android:layout_width="0.0dp" android:layout_marginTop="@dimen/element_padding_large" android:text="@string/plato_later" android:layout_marginEnd="@dimen/element_padding_small" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/notification_rationale_button_continue" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/notification_rationale_types_container" style="@style/ButtonTransparent" />
    <TextView android:id="@id/notification_rationale_button_continue" android:layout_width="0.0dp" android:layout_marginTop="@dimen/element_padding_large" android:text="@string/plato_continue" android:layout_marginStart="@dimen/element_padding_small" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/notification_rationale_button_later" app:layout_constraintTop_toBottomOf="@id/notification_rationale_types_container" style="@style/ButtonBlue" />
</androidx.constraintlayout.widget.ConstraintLayout>
