<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/plato_report_title" android:text="@string/plato_report_title" style="@style/AlertDialogTitleBase" />
    <View android:background="?appThemeColorDividerLine" android:layout_width="match_parent" android:layout_height="@dimen/divider_height" />
    <TextView android:textSize="@dimen/text_size_small" android:textColor="?appThemeColorTextTitle" android:id="@id/plato_report_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/element_padding_default" android:textAlignment="viewStart" />
    <TextView android:textSize="@dimen/text_size_default" android:textColor="?appThemeColorTextDefault" android:id="@id/select_a_reason_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/element_padding_default" android:text="@string/plato_report_reason_title" android:textAlignment="viewStart" />
    <ScrollView android:scrollbarThumbVertical="@drawable/plato_scroll_style" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
        <include layout="@layout/partial_report_radio_group" />
    </ScrollView>
    <TextView android:id="@id/plato_report_submit" android:text="@string/plato_submit" style="@style/ButtonBlue" />
</LinearLayout>
