<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:background="@drawable/background_round_top_dialog_secondary" android:layout_width="match_parent" android:layout_height="@dimen/action_bar_height" android:backgroundTint="?appThemeColorScreenBackgroundPrimary">
        <ImageButton android:layout_gravity="end|center" android:id="@id/close_button" android:contentDescription="@string/plato_cancel" android:layout_marginEnd="@dimen/element_padding_tiny" style="@style/ButtonClose" />
        <TextView android:textSize="@dimen/text_size_default" android:textColor="?appThemeColorTextTitle" android:layout_gravity="center" android:id="@id/title_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose_game_session" android:textAllCaps="true" />
    </FrameLayout>
    <View android:background="?appThemeColorDividerLine" android:layout_width="match_parent" android:layout_height="@dimen/divider_height" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/games_recycler_view" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0" style="@style/RecyclerViewStyle" />
    <TextView android:id="@id/create_new_game_text_view" android:layout_height="@dimen/bottomsheet_dialog_action_button_height" android:text="@string/plato_create_new_game" style="@style/ButtonBlue" />
</LinearLayout>
