<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/text_size_extra_large" android:textColor="?appThemeColorTextTitle" android:id="@id/maintenance_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/element_padding_extra_large" android:layout_marginBottom="@dimen/element_padding_extra_large" android:text="@string/dialog_maintenance_title" app:layout_constraintBottom_toTopOf="@id/maintenance_body_one" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/text_size_default" android:textColor="?appThemeColorTextTitle" android:gravity="center" android:id="@id/maintenance_body_one" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/element_padding_large" android:text="@string/dialog_maintenance_body_one" android:layout_marginStart="@dimen/element_padding_extra_large" android:layout_marginEnd="@dimen/element_padding_extra_large" app:layout_constrainedWidth="true" app:layout_constraintBottom_toTopOf="@id/maintenance_body_two" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/maintenance_title" />
    <TextView android:textSize="@dimen/text_size_default" android:textColor="?appThemeColorTextTitle" android:gravity="center" android:id="@id/maintenance_body_two" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/element_padding_large" android:text="@string/dialog_maintenance_body_two" android:layout_marginStart="@dimen/element_padding_large" android:layout_marginEnd="@dimen/element_padding_large" app:layout_constraintBottom_toTopOf="@id/maintenance_body_three" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/maintenance_body_one" />
    <TextView android:textSize="@dimen/text_size_default" android:textColor="?appThemeColorTextTitle" android:gravity="center" android:id="@id/maintenance_body_three" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/element_padding_large" android:text="@string/dialog_maintenance_body_three" android:layout_marginStart="@dimen/element_padding_large" android:layout_marginEnd="@dimen/element_padding_large" app:layout_constraintBottom_toTopOf="@id/maintenance_confirmation" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/maintenance_body_two" />
    <TextView android:textSize="@dimen/text_size_default" android:gravity="center" android:id="@id/maintenance_confirmation" android:layout_width="match_parent" android:layout_height="50.0dp" android:layout_marginTop="@dimen/element_padding_extra_large" android:text="@string/plato_ok" android:textAllCaps="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/maintenance_body_three" style="@style/ButtonBlue" />
</androidx.constraintlayout.widget.ConstraintLayout>
